# bachelor_thesis

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: file.h5  new_file.h5  out_14_04_2022__14_58_06_0.300000.h5  out_14_04_2022__14_58_06_0.400000.h5  out_14_04_2022__14_58_06_0.500000.h5  out_14_04_2022__14_58_06_0.600000.h5  out_14_04_2022__14_58_06_0.700000.h5  out_14_04_2022__14_58_06_0.800000.h5  out_14_04_2022__14_58_06_0.900000.h5  out_14_04_2022__14_58_06_1.000000.h5  out_14_04_2022__14_58_06_1.100000.h5  out_14_04_2022__14_58_06_1.200000.h5  out_14_04_2022__14_58_06_1.300000.h5  out_14_04_2022__14_58_06_1.400000.h5  out_14_04_2022__14_58_06_1.500000.h5  out_14_04_2022__14_58_06_1.600000.h5  out_14_04_2022__14_58_06_1.700000.h5  out_14_04_2022__14_58_06_1.800000.h5  out_14_04_2022__14_58_06_1.900000.h5  out_14_04_2022__14_58_06_2.000000.h5  out_14_04_2022__14_58_06_2.100000.h5  out_14_04_2022__14_58_06_2.200000.h5  out_14_04_2022__14_58_06_2.300000.h5  out_14_04_2022__14_58_06_2.400000.h5  out_14_04_2022__14_58_06_2.500000.h5  out_14_04_2022__14_58_06_2.600000.h5  out_14_04_2022__14_58_06_2.700000.h5  out_14_04_2022__14_58_06_2.800000.h5  out_14_04_2022__14_58_06_2.900000.h5  out_14_04_2022__14_58_06_3.000000.h5  out_14_04_2022__14_58_06_3.100000.h5  out_14_04_2022__14_58_06_3.200000.h5  out_14_04_2022__14_58_06_3.300000.h5  out_14_04_2022__14_58_06_3.400000.h5  out_14_04_2022__14_58_06_3.500000.h5  out_14_04_2022__14_58_06_3.600000.h5  out_14_04_2022__14_58_06_3.700000.h5  out_14_04_2022__14_58_06_3.800000.h5  out_14_04_2022__14_58_06_3.900000.h5  out_14_04_2022__14_58_06_4.000000.h5  (+2 more)
data/3d_new/: energy_output.txt  energy_squared_output.txt  magnetization_output.txt  magnetization_squared_output.txt
data/3d_new_c_0_3/: energy_output.txt  energy_squared_output.txt  magnetization_output.txt  magnetization_squared_output.txt
data/newnew/: magnetization_output.txt
data/volume_exponent_test/: energy_output.txt  energy_squared_output.txt  magnetization_output.txt  magnetization_squared_output.txt  output.txt
docs/: CMakeLists.txt  Doxyfile.in  mainpage.in.md
plot/: plot.py
src/: CMakeLists.txt  SrcConfig.h.in  main.cpp
src/Analyzer/: Analyzer.cpp  Analyzer.h  CMakeLists.txt
src/BaseModel/: BaseModel.h  CMakeLists.txt
src/HMCGenerator/: CMakeLists.txt  HMCGenerator.cpp  HMCGenerator.h
src/IsingModel/: CMakeLists.txt  IsingModel.cpp  IsingModel.h
src/LeapFrogIntegrator/: CMakeLists.txt  LeapFrogIntegrator.cpp  LeapFrogIntegrator.h
src/MultiLevelHMCGenerator/: CMakeLists.txt  MultiLevelHMCGenerator.cpp  MultiLevelHMCGenerator.h
src/MyTypes/: CMakeLists.txt  MyTypes.cpp  MyTypes.h
src/Tensors_basic/: CMakeLists.txt  Tensors_basic.cpp  Tensors_basic.h
src/XYModel/: CMakeLists.txt  XYModel.cpp  XYModel.h
